--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
+    "react-hook-form": "^7.54.1",
     "sass": "^1.83.0"
   },
   "devDependencies": {
