--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.54.1",
+    "react-select": "^5.9.0",
     "sass": "^1.83.0"
   },
   "devDependencies": {
